Reduce transparency for thumbnails and make sure calendar header doesn't display borderlines [touch: 3250]
I thought there was a bit too much transparency for the calendar images. Reducing this a bit. Themes like twenty fourteen were displaying borderlines in the calendar header which looked a little funny.

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -383,7 +383,7 @@ The Buttons and related paraphenalia
 	border-radius: 0;
 	box-shadow: none;
 	vertical-align: middle;
-	opacity: 0.7;
+	opacity: 0.85;
 }
 #espresso_calendar .thumb-wrap img:hover {
 	opacity: 1;
@@ -578,7 +578,7 @@ a.fc-event.themeroller.ui-widget-header span.fc-event-title, a.fc-event.themerol
 	margin: 0 0 0 -33px;
 	box-shadow: none !important;
 }
-.fc-header td {
+#espresso_calendar .fc-header td {
 	border: none;
 }
 /* prevent transitions from getting applied to calendar links as some themes are known to do this
